--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <a href="https://www.linkedin.com/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/freecodecamp/" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.instagram.com/zdragon19z/" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-instagram"></i>
         </a>
         <a href="mailto:ivanronyci@gmail.com" target="_blank" rel="noopener noreferrer">
